# basic-factory

./: .gitignore  README.md  basic-factory-LLMS.md  basic-memory.md  claude_desktop_config.json  claude_github_tools.json  hello.py  ideas.md  pyproject.toml
.github/workflows/: test.yml
src/basic_factory/: __init__.py  api.py  claude.py  cli.py  git.py  github.py  handlers.py  hello.py  tools.py
tests/: test_api.py  test_claude.py  test_git.py  test_github.py  test_hello.py  test_integration.py
