[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic-factory"
version = "0.1.0"
description = "AI-assisted software development workflow tools"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Basic Machines" },
]
dependencies = [
    "pygit2>=1.13.1",  # For git operations
    "pygithub>=2.1.1", # For GitHub API
    "click>=8.1.7",    # For CLI
    "pydantic>=2.5.2", # For data validation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/basic_factory"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
basic-factory = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
addopts = "-ra -q"

