[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basic-factory"
version = "0.1.0"
description = "AI-assisted software development workflow tools"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Basic Machines" },
]
dependencies = [
    "pygit2>=1.13.1", # For git operations
    "pygithub>=2.1.1", # For GitHub API
    "pydantic>=2.5.2",
    # For data validation
    "typer[all]>=0.13.1",
    "anthropic>=0.18.0",
    "httpx>=0.27.0", # Required by anthropic client
    "fastapi[all]>=0.115.5",
    "loguru>=0.7.2",
]

[project.scripts]
basic-factory = "basic_factory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/basic_factory"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "basic-factory",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
basic-factory = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
addopts = "-ra -q"

markers = [
    "integration: marks tests as integration tests"
]
